# otus_game

./: .travis.yml  CMakeLists.txt  Doxyfile
src/: AbstractObject.h  CMakeLists.txt  ObjectTank.cpp  ObjectTank.h  Property.h  Vector.cpp  Vector.h  main.cpp
src/commands/: AbstractCommand.h  AdapterMovable.cpp  AdapterMovable.h  CommandMovable.cpp  CommandMovable.h  Movable.cpp  Movable.h
src/objects/: AbstractObject.h  ObjectBase.cpp  ObjectBase.h  ObjectTank.cpp  ObjectTank.h  Objects.cpp  Objects.h
src/types/: Property.h  Vector.cpp  Vector.h
test/: CMakeLists.txt  tb_main.cpp
